docs: docs in construction

--- a/docs/.vitepress/theme/src/styles/layouts/vp-header.scss
+++ b/docs/.vitepress/theme/src/styles/layouts/vp-header.scss
@@ -1,4 +1,5 @@
 @use '../vars/vars' as *;
+@use '../mixins/reactive' as *;
 
 .ef-header__conatiner {
   height: 50px;
@@ -7,15 +8,22 @@
   background-repeat: repeat-y;
   background-size: 100% 3px;
   border-bottom: 1px solid $main_border_color;
+
   .ef-header__nav {
     display: flex;
     align-items: center;
-    width: $main_width;
+    justify-content: space-between;
     height: 100%;
     margin: 0 auto;
+    max-width: $super_width;
+
     .logo {
       height: 60%;
       cursor: pointer;
+      margin: 0 10px;
+    }
+    .ef-header__navigate {
+      height: 100%;
     }
   }
 }
