--- a/docs/.vitepress/theme/src/styles/vars/vars.scss
+++ b/docs/.vitepress/theme/src/styles/vars/vars.scss
@@ -1,2 +1,5 @@
-$main_width: 1480px;
+$small_width: 580px;
+$middle_width: 880px;
+$large_width: 1180px;
+$super_width: 1480px;
 $main_border_color: #dbdbdb;
