--- a/packages/theme/src/mixins/_mixins.scss
+++ b/packages/theme/src/mixins/_mixins.scss
@@ -49,3 +49,16 @@
   }
   @content;
 }
+
+@mixin center_flex($type: null) {
+  display: flex;
+  @if ($type == 'across') {
+    justify-content: center;
+  } @else if($type == 'vertical') {
+    align-items: center;
+  } @else {
+    justify-content: center;
+    align-items: center;
+  }
+  @content;
+}
