--- a/packages/theme/src/common/_config.scss
+++ b/packages/theme/src/common/_config.scss
@@ -1,4 +1,4 @@
-$namespace: 'ef' !default;
+$namespace: 's' !default;
 $common-separator: '-' !default;
 $element-separator: '__' !default;
 $modifier-separator: '--' !default;
