--- a/docs/.vitepress/theme/src/styles/common/reset.scss
+++ b/docs/.vitepress/theme/src/styles/common/reset.scss
@@ -15,7 +15,10 @@ li {
 
 body {
   background-color: var(--s-bg-color);
+  // overflow: hidden;
   font-size: 14px;
   color: var(--s-text-color);
+  font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB,
+    Microsoft YaHei, \5fae\8f6f\96c5\9ed1, Arial, sans-serif;
   @include transition((background-color, color));
 }
