--- a/packages/theme/vars/_vars.scss
+++ b/packages/theme/vars/_vars.scss
@@ -8,6 +8,11 @@ $colors: map.deep-merge(
   $colors
 );
 
+$common: (
+  width-size: 1,
+  height-size: 1,
+) !default;
+
 $light: () !default;
 $light: map.deep-merge(
   (
