feat(components): form component in production

--- a/packages/theme/common/_config.scss
+++ b/packages/theme/common/_config.scss
@@ -3,3 +3,4 @@ $common-separator: '-';
 $element-separator: '__';
 $modifier-separator: '--';
 $state-prefix: 'is-';
+$prefix: $namespace + $common-separator;
