--- a/packages/theme/icon/icon.scss
+++ b/packages/theme/icon/icon.scss
@@ -1,6 +1,6 @@
-@use '../mixins/mixins' as m;
+@use '../mixins/bem' as *;
 
-@include m.b('icon') {
+@include b('icon') {
   display: inline-flex;
   align-items: center;
   width: 1em;
