feat: input component under development

--- a/packages/theme/input/input.scss
+++ b/packages/theme/input/input.scss
@@ -30,6 +30,13 @@
       font-size: inherit;
       outline: 0;
       box-sizing: border-box;
+      -moz-appearance: textfield;
+
+      &::-webkit-inner-spin-button,
+      &::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
     }
   }
 }
