--- a/packages/theme/icon/icon.scss
+++ b/packages/theme/icon/icon.scss
@@ -1,6 +1,6 @@
-@use '../mixins/bem' as *;
+@use '../function/bem' as *;
 
-@include b('icon') {
+#{b('icon')} {
   display: inline-flex;
   align-items: center;
   width: 1em;
